[package]
name = "rapr"
version = "0.1.0"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = "0.11.*"
chrono = "0.4.*"
json = "0.12.*"
tokio = { version = "1.3.*", features = ["full"] }
