[package]
name = "rapr"
version = "0.1.0"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derive-error = "0.0.5"
reqwest = "0.11.2"
json = "0.12.4"
tokio = { version = "1.4.0", features = ["full"] }

