[package]
name = "rapr"
version = "0.1.1"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derive-error = "0.0.5"
reqwest = "0.11.2"
tokio = { version = "1.4.0", features = ["full"] }
serde = "1.0.125"
serde_json = "1.0.64"

